[package]
name = "monoql_core"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "monoql"


[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }
fake = { workspace = true }
oso = { workspace = true }
oso-derive = { workspace = true }
chrono = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
